<resources>
    <string name="app_name">The Gallows</string>
    <string name="about">Rules</string>
    <string name="regular_play_button">REGULAR PLAY</string>
    <string name="freeplay_button">FREEPLAY</string>
    <string name="main_menu_button">MAIN MENU</string>
    <string name="play_again_button">PLAY AGAIN?</string>
    <string name="IV_content_description">Hangman Drawing</string>
    <string name="startscreen_img_description">Start Screen Image</string>
    <string name="endgame_img_description">Game Result Image</string>
    <string name="animation_pref_note">Disabling this will SIGNIFICANTLY increase the speed of the app\n\n
        NOTE: Selecting this will restart the app.
    </string>

    <string name="A">A</string>
    <string name="B">B</string>
    <string name="C">C</string>
    <string name="D">D</string>
    <string name="E">E</string>
    <string name="F">F</string>
    <string name="G">G</string>
    <string name="H">H</string>
    <string name="I">I</string>
    <string name="J">J</string>
    <string name="K">K</string>
    <string name="L">L</string>
    <string name="M">M</string>
    <string name="N">N</string>
    <string name="O">O</string>
    <string name="P">P</string>
    <string name="Q">Q</string>
    <string name="R">R</string>
    <string name="S">S</string>
    <string name="T">T</string>
    <string name="U">U</string>
    <string name="V">V</string>
    <string name="W">W</string>
    <string name="X">X</string>
    <string name="Y">Y</string>
    <string name="Z">Z</string>

    <string name="hintWindowTitle">Hint…</string>
    <string name="HintButton">USE HINT</string>
    <string name="CloseHintButton">Close</string>

    <string name="WordUnderline">___</string>
    <string name="WordUnderline2">__</string>
    <string name="WordUnderline3">_</string>
    <string name="Space">   </string>

    <!-- These are for Preferences -->
    <string-array name="bgColors">
        <item>Green (Default)</item>
        <item>Black</item>
        <item>Blue</item>
        <item>Cyan</item>
        <item>Indigo</item>
        <item>Orange</item>
        <item>Pink</item>
        <item>Purple</item>
        <item>Red</item>
        <item>Violet</item>
        <item>Yellow</item>
        <item>Random!</item>
    </string-array>

    <string-array name="bgColorValues">
        <item>GREEN</item>
        <item>BLACK</item>
        <item>BLUE</item>
        <item>CYAN</item>
        <item>INDIGO</item>
        <item>ORANGE</item>
        <item>PINK</item>
        <item>PURPLE</item>
        <item>RED</item>
        <item>VIOLET</item>
        <item>YELLOW</item>
        <item>RANDOM</item>
    </string-array>

    <string-array name="fpRound">
        <item>1 round (Default)</item>
        <item>2 rounds</item>
        <item>3 rounds</item>
        <item>4 rounds</item>
        <item>5 rounds</item>
        <item>10 rounds</item>
        <item>15 rounds</item>
        <item>20 rounds</item>
    </string-array>

    <string-array name="fpRoundValues">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>10</item>
        <item>15</item>
        <item>20</item>
    </string-array>

</resources>
