<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="3"
    android:gravity="fill">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/LevelBar">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/BarComponents"
            android:weightSum="2">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:weightSum="2"
                android:id="@+id/LevelAndCategory"
                android:layout_weight=".5">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/LevelText"
                    android:layout_weight="1"
                    android:textSize="30sp"
                    android:gravity="center" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/CategoryText"
                    android:textSize="20sp"
                    android:layout_weight="1"
                    android:gravity="bottom|center" />
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1.25"
                android:id="@+id/LifeAndHints"
                android:weightSum="2">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/LifesText"
                    android:layout_weight="1"
                    android:gravity="bottom"
                    android:textSize="17sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=" "
                    android:id="@+id/HintsText"
                    android:layout_weight="1"
                    android:gravity="bottom"
                    android:textSize="17sp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/hangmanAreaContainer"
        android:layout_weight="3">

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:id="@+id/hangman_area"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            android:background="#c80000"
            android:contentDescription="@string/IV_content_description" />
    </ScrollView>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/wordAreaContainer">

    </ScrollView>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/HintArea" >

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/HintButton"
            android:id="@+id/HintKey" />
    </ScrollView>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/keyboardAreaContainer"
        android:layout_gravity="bottom">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/keyboardAreaLayout"
            android:weightSum="3"
            android:paddingTop="2dp"
            android:paddingBottom="2dp"
            android:visibility="visible">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/row1"
                android:weightSum="10"
                android:layout_weight="1"
                android:paddingTop="3dp"
                android:paddingBottom="3dp"
                android:paddingLeft="2dp"
                android:paddingRight="2dp">

                <Button style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Q"
                    android:id="@+id/Q"
                    android:layout_weight="1"
                    android:background="@drawable/button_design" />

                <Button style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/W"
                    android:id="@+id/W"
                    android:layout_weight="1"
                    android:background="@drawable/button_design" />

                <Button style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/E"
                    android:id="@+id/E"
                    android:layout_weight="1"
                    android:background="@drawable/button_design" />

                <Button style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/R"
                    android:id="@+id/R"
                    android:layout_weight="1"
                    android:background="@drawable/button_design" />

                <Button style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/T"
                    android:id="@+id/T"
                    android:layout_weight="1"
                    android:background="@drawable/button_design" />

                <Button style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Y"
                    android:id="@+id/Y"
                    android:layout_weight="1"
                    android:background="@drawable/button_design" />

                <Button style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/U"
                    android:id="@+id/U"
                    android:layout_weight="1"
                    android:background="@drawable/button_design" />

                <Button style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/I"
                    android:id="@+id/I"
                    android:layout_weight="1"
                    android:background="@drawable/button_design" />

                <Button style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/O"
                    android:id="@+id/O"
                    android:layout_weight="1"
                    android:background="@drawable/button_design" />

                <Button style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/P"
                    android:id="@+id/P"
                    android:layout_weight="1"
                    android:background="@drawable/button_design" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/row2"
                android:weightSum="10"
                android:layout_weight="1"
                android:paddingBottom="3dp">

                <Button style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/space_left1"
                    android:visibility="invisible"
                    android:layout_weight=".5"
                    android:background="@drawable/button_design" />

                <Button style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/A"
                    android:id="@+id/A"
                    android:layout_weight="1"
                    android:background="@drawable/button_design"
                    android:allowUndo="false" />

                <Button style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/S"
                    android:id="@+id/S"
                    android:layout_weight="1"
                    android:background="@drawable/button_design"
                    android:allowUndo="false" />

                <Button style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/D"
                    android:id="@+id/D"
                    android:layout_weight="1"
                    android:background="@drawable/button_design"
                    android:allowUndo="false" />

                <Button style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/F"
                    android:id="@+id/F"
                    android:layout_weight="1"
                    android:background="@drawable/button_design"
                    android:allowUndo="false" />

                <Button style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/G"
                    android:id="@+id/G"
                    android:layout_weight="1"
                    android:background="@drawable/button_design"
                    android:allowUndo="false" />

                <Button style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/H"
                    android:id="@+id/H"
                    android:layout_weight="1"
                    android:background="@drawable/button_design"
                    android:allowUndo="false" />

                <Button style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/J"
                    android:id="@+id/J"
                    android:layout_weight="1"
                    android:background="@drawable/button_design"
                    android:allowUndo="false" />

                <Button style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/K"
                    android:id="@+id/K"
                    android:layout_weight="1"
                    android:background="@drawable/button_design"
                    android:allowUndo="false" />

                <Button style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/L"
                    android:id="@+id/L"
                    android:layout_weight="1"
                    android:background="@drawable/button_design"
                    android:allowUndo="false" />

                <Button style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/space_right1"
                    android:visibility="invisible"
                    android:layout_weight=".5"
                    android:background="@drawable/button_design" />

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/row3"
                android:layout_weight="1"
                android:paddingBottom="3dp">

                <Button style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/space_left2"
                    android:visibility="invisible"
                    android:layout_weight="1.5"
                    android:background="@drawable/button_design" />

                <Button style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Z"
                    android:id="@+id/Z"
                    android:visibility="visible"
                    android:layout_weight="1"
                    android:background="@drawable/button_design" />

                <Button style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/X"
                    android:id="@+id/X"
                    android:layout_weight="1"
                    android:background="@drawable/button_design" />

                <Button style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/C"
                    android:id="@+id/C"
                    android:layout_weight="1"
                    android:background="@drawable/button_design" />

                <Button style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/V"
                    android:id="@+id/V"
                    android:layout_weight="1"
                    android:background="@drawable/button_design" />

                <Button style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/B"
                    android:id="@+id/B"
                    android:layout_weight="1"
                    android:background="@drawable/button_design" />

                <Button style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/N"
                    android:id="@+id/N"
                    android:layout_weight="1"
                    android:background="@drawable/button_design" />

                <Button style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/M"
                    android:id="@+id/M"
                    android:layout_weight="1"
                    android:background="@drawable/button_design" />

                <Button style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/space_right2"
                    android:visibility="invisible"
                    android:layout_weight="1.5"
                    android:background="@drawable/button_design" />

            </LinearLayout>


        </LinearLayout>

    </ScrollView>

</LinearLayout>