<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/view_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/greenboard"
    tools:context="csci3320.thegallows.Endgame">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/settings_button"
        android:id="@+id/settings_button"
        android:layout_gravity="right"
        android:layout_weight="0.10"
        android:background="#00000000"
        android:textColor="#FFFFFF"
        android:visibility="visible"
        android:padding="5sp" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_weight=".80"
        android:id="@+id/ResultImage"
        android:contentDescription="@string/endgame_img_description" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/difficulty_buttons"
        android:layout_weight=".10"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">
        <TableRow
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_weight="1"
            style="?android:attr/buttonBarStyle"
            android:background="#00000000">

            <Button
                android:id="@+id/play_again_button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/play_again_button"
                android:textColor="#FFFFFF"
                style="?android:attr/buttonBarButtonStyle"
                android:background="#00ffffff" />

            <Button
                android:id="@+id/main_menu_button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/main_menu_button"
                android:textColor="#FFFFFF"
                style="?android:attr/buttonBarButtonStyle"
                android:background="#00ffffff" />

        </TableRow>
    </TableLayout>
</LinearLayout>
